--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
     "extends": "react-app"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.24",
+    "@fortawesome/free-solid-svg-icons": "^5.11.1",
+    "@fortawesome/react-fontawesome": "^0.1.4",
     "axios": "^0.19.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
+    "bootstrap": "^4.3.1",
     "colors": "^1.3.3",
     "concurrently": "^4.1.0",
     "connect-ensure-login": "^0.1.1",
@@ -44,8 +48,8 @@
     "query-string": "^6.4.0",
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
-    "react-helmet": "^5.2.0",
-    "react-icons": "^3.5.0",
+    "react-helmet": "^5.2.1",
+    "react-icons": "^3.7.0",
     "react-image-magnify": "^2.7.4",
     "react-loader-spinner": "^2.3.0",
     "react-map-gl": "^4.1.1",
